--- a/app/src/main/res/layout/item_list_movies.xml
+++ b/app/src/main/res/layout/item_list_movies.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -12,6 +13,7 @@
         android:layout_height="160dp"
         android:layout_gravity="top"
         android:contentDescription="@string/todo"
+        app:srcCompat="@drawable/poster_aquaman"
         android:foregroundGravity="top"
         android:scaleType="fitXY" />
 
