--- a/app/src/main/res/layout/fragment_tvshow.xml
+++ b/app/src/main/res/layout/fragment_tvshow.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".TVShowFragment">
+    tools:context="learning.shinesdev.mymoviesapi.TVShowFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
