--- a/app/src/main/res/layout/item_list_movies.xml
+++ b/app/src/main/res/layout/item_list_movies.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -14,8 +13,7 @@
         android:layout_gravity="top"
         android:contentDescription="@string/todo"
         android:foregroundGravity="top"
-        android:scaleType="fitXY"
-        app:srcCompat="@drawable/poster_aquaman" />
+        android:scaleType="fitXY"/>
 
     <LinearLayout
         android:layout_width="0dp"
