--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -14,9 +14,7 @@
         <ProgressBar
             android:id="@+id/progress_movie"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true" />
+            android:layout_height="wrap_content" />
 
 
         <androidx.recyclerview.widget.RecyclerView
