--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -5,6 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="learning.shinesdev.mymoviesapi.DetailMovieActivity"
+    tools:context="learning.shinesdev.mymoviesapi.activity.detail.DetailMovieActivity"
     >
 </FrameLayout>
