--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="learning.shinesdev.mymoviesapi.MainActivity">
+    tools:context="learning.shinesdev.mymoviesapi.activity.home.MainActivity">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabs"
