Add response API

--- a/app/src/main/res/layout/item_list_detail_random.xml
+++ b/app/src/main/res/layout/item_list_detail_random.xml
@@ -31,7 +31,7 @@
                 style="@style/LabelContent.Title"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
-                android:text="@string/title" />
+                android:text="@string/lbl_title" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
