--- a/app/src/main/res/menu/favorite.xml
+++ b/app/src/main/res/menu/favorite.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/favorite"
         android:icon="@drawable/ic_favorite_white_24dp"
-        android:title="@string/favorite"
+        android:title="@string/lbl_favorite"
         app:showAsAction="always" />
 </menu>
