--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<merge>
 <FrameLayout
     android:id="@+id/frame_container_movie"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -6,5 +7,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="learning.shinesdev.mymoviesapi.activity.detail.DetailMovieActivity"
-    >
-</FrameLayout>
+    />
+</merge>
